logs/offboard_pkg/build.make.097.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp: In function ‘int main(int, char**)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/main.cpp:116:68: error: invalid types ‘double[size_t {aka long unsigned int}]’ for array subscript
  116 |                 ned[i] = uav[i].get_ned(theta_d, yaw_d, R, length[i], angle_d[i]);
      |                                                                    ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:63: CMakeFiles/offboard_pkg_node.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
